manifests/85-authn/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bedrock-system
  labels:
    bedrock.cloudyfolks.io/component: authn
