manifests/85-authn/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bedrock-authn
  namespace: bedrock-system
  labels:
    bedrock.cloudyfolks.io/component: authn
spec:
  selector:
    app: bedrock-authn
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
